add button to page

--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,8 @@
-<head/>
+<html>
 <body>
-	<form method="POST" action="remote">
-			<input type="submit" name="blower_ON"  />
-			<input type="submit" name="blower_OFF"  />
+	<form method="POST" action="/remote">
+		<button type="submit" value="on" name="blower"> Allummer souffleur </button>
+		<button type="submit" value="off" name="blower"> Eteindre souffleur </button>
 	</form>
 </body>
+</html>
