change mistake in spelling

--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 	<form method="POST" action="/remote">
-		<button type="submit" value="on" name="blower"> Allummer souffleur </button>
+		<button type="submit" value="on" name="blower"> Allumer souffleur </button>
 		<button type="submit" value="off" name="blower"> Eteindre souffleur </button>
 	</form>
 </body>
